@@ -28,6 +28,7 @@ application code.
 ** Fix build issue on Tru64 and ia64-hp-hpux11.23 (`SCM_UNPACK' macro)
 ** Fix build issue on mips, mipsel, powerpc and ia64 (stack direction)
 ** Fix build issue on hppa2.0w-hp-hpux11.11 (`dirent64' and `readdir64_r')
+** Fix misleading output from `(help rationalize)'
 
 
 Changes in 1.8.5 (since 1.8.4)
